[gd_scene load_steps=8 format=2]

[ext_resource path="res://raw_assets/images/items_icons/inventory_frame_75.png" type="Texture" id=1]
[ext_resource path="res://src/PlayerInventory/InventorySlot/InventorySlot.gd" type="Script" id=2]
[ext_resource path="res://raw_assets/fonts/Terminal-Grotesque-master/terminal-grotesque.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=3]
size = 17
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="InventorySlot" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -949.0
margin_bottom = -525.0
rect_rotation = -0.614645
script = ExtResource( 2 )

[node name="Label_Tooltip" type="Label" parent="."]
margin_right = 75.0
margin_bottom = 18.0
theme = SubResource( 4 )
text = "Text"
align = 1
valign = 1

[node name="TextureFrame" type="TextureRect" parent="."]
margin_top = 22.0
margin_right = 75.0
margin_bottom = 97.0
texture = ExtResource( 1 )

[node name="ItemIcon" type="TextureRect" parent="TextureFrame"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label_Amount" type="Label" parent="TextureFrame"]
margin_left = 50.0
margin_top = 56.0
margin_right = 70.0
margin_bottom = 74.0
theme = SubResource( 2 )
text = "12"
align = 2
